syntax = "proto3"; // 声明了protobuf的版本

package fixbug; // 声明了代码所在的包，C++没有包管理，这相当于namespace

// 定义下面的选项，表示生成service服务类和rpc方法描述，默认不生成
option cc_generic_services = true;

// 返回错误码
message ResultCode
{
    int32 errcode = 1;
    bytes errmsg = 2;
}

// 定义登录消息类型 name pwd
// 这里得类型不是C++得类型
message LoginRequest
{
    string name = 1; // 第一个字段 string类型是protobuf的string类型
    string pwd = 2;  // 第二个字段
}

// 定义登录响应消息类型 
message LoginResponse
{
    int32 errcode = 1;
    string errmsg = 2;
    bool success = 3;
}

message GetFriendListsRequest
{
    uint32 userid = 1;
}

message User
{
    bytes name = 1;
    uint32 age = 2;
    enum Sex
    {
        MAN = 0;
        WOMAN = 1;
    }
    Sex sex = 3;
}

message GetFriendListsResponse
{
    ResultCode result =  1;
    repeated User friend_list = 2; // 定义了一个列表类型（repeated：重复）
}




// service 默认不生成，需要前面option定义!!
// 在protobuf里描述rpc方法的类型 - service 服务类
// rpc 方法名(参数类型) returns(返回类型);
service UserServiceRpc
{
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc GetFriendLists(GetFriendListsRequest) returns(GetFriendListsResponse);
}
